Avoid unnecessary horizontal scrollbars
Fix long key values rendering with horizontal scrollbar;
Fix keys folder with checkbox in one line and key name in another line.

--- a/css/common.css
+++ b/css/common.css
@@ -52,6 +52,6 @@ background: url(../images/add.png) left center no-repeat;
 
 
 .data {
-white-space: pre;
+white-space: pre-wrap;
 }
 
